[REFACTORING / BUG FIXING] 1) Moved content on I_NEED_HELP and I_WANT_TO_HELP pages a bit down so that is not covered by the Navbar 2) Added an email field to the Help request form 3) Marked some fields as not mandatory

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,6 +1,6 @@
 /*TODO: move to styled components*/
 .form-wrapper {
-  margin-top: 3rem;
+  margin-top: 8%;
   width: 50%;
   margin-left: 25%;
 }
