--- a/src/pages/i-want-to-help-style.css
+++ b/src/pages/i-want-to-help-style.css
@@ -2,6 +2,7 @@
 .wrapper {
   width: 80%;
   margin-left: 10%;
+  margin-top: 8%
 }
 
 h1 {
